[metadata]
name = sonnenbatterie
version = 0.5.2
author = Jan Weltmeyer
description = "Access Sonnenbatterie REST API"
long_description = file: README.md
long_description_content_type = text/markdown
license = GPLv3
url = https://github.com/weltmeyer/python_sonnenbatterie
project_urls =
    Issue Tracker = https://github.com/weltmeyer/python_sonnenbatterie/issues
classifiers =
    Development Status :: 4 - Beta
    Programming Language :: Python :: 3.10
    Operating System :: OS Independent
    Environment :: Console
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)

[options]
package_dir =
    = .
packages = find:
include_package_data = True
python_requires = >= 3.10
install_requires =
    requests
    aiohttp

[options.packages.find]
where = .
